tests/baselines/reference/importCallExpressionCheckReturntype1.errors.txt
tests/cases/conformance/dynamicImport/1.ts(4,5): error TS2322: Type 'Promise<typeof import("tests/cases/conformance/dynamicImport/defaultPath")>' is not assignable to type 'Promise<typeof import("tests/cases/conformance/dynamicImport/anotherModule")>'.
  Type 'typeof import("tests/cases/conformance/dynamicImport/defaultPath")' is not assignable to type 'typeof import("tests/cases/conformance/dynamicImport/anotherModule")'.
    Property 'D' is missing in type 'typeof import("tests/cases/conformance/dynamicImport/defaultPath")'.
tests/cases/conformance/dynamicImport/1.ts(5,10): error TS2352: Conversion of type 'Promise<typeof import("tests/cases/conformance/dynamicImport/defaultPath")>' to type 'Promise<typeof import("tests/cases/conformance/dynamicImport/anotherModule")>' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.
  Type 'typeof import("tests/cases/conformance/dynamicImport/defaultPath")' is not comparable to type 'typeof import("tests/cases/conformance/dynamicImport/anotherModule")'.
    Property 'D' is missing in type 'typeof import("tests/cases/conformance/dynamicImport/defaultPath")'.


==== tests/cases/conformance/dynamicImport/anotherModule.ts (0 errors) ====
    export class D{}
    
==== tests/cases/conformance/dynamicImport/defaultPath.ts (0 errors) ====
    export class C {}
    
==== tests/cases/conformance/dynamicImport/1.ts (2 errors) ====
    import * as defaultModule from "./defaultPath";
    import * as anotherModule from "./anotherModule";
    
    let p1: Promise<typeof anotherModule> = import("./defaultPath");
        ~~
!!! error TS2322: Type 'Promise<typeof import("tests/cases/conformance/dynamicImport/defaultPath")>' is not assignable to type 'Promise<typeof import("tests/cases/conformance/dynamicImport/anotherModule")>'.
!!! error TS2322:   Type 'typeof import("tests/cases/conformance/dynamicImport/defaultPath")' is not assignable to type 'typeof import("tests/cases/conformance/dynamicImport/anotherModule")'.
!!! error TS2322:     Property 'D' is missing in type 'typeof import("tests/cases/conformance/dynamicImport/defaultPath")'.
    let p2 = import("./defaultPath") as Promise<typeof anotherModule>;
             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2352: Conversion of type 'Promise<typeof import("tests/cases/conformance/dynamicImport/defaultPath")>' to type 'Promise<typeof import("tests/cases/conformance/dynamicImport/anotherModule")>' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.
!!! error TS2352:   Type 'typeof import("tests/cases/conformance/dynamicImport/defaultPath")' is not comparable to type 'typeof import("tests/cases/conformance/dynamicImport/anotherModule")'.
!!! error TS2352:     Property 'D' is missing in type 'typeof import("tests/cases/conformance/dynamicImport/defaultPath")'.
    let p3: Promise<any> = import("./defaultPath");
    